# ad

./: BRANCH_README  GMM.hs  LAD.hs  LICENSE.txt  Op.hs  hunk.hs  linear-ad.tex  test18.hs  test2.hs  tmp-socket.cabal  tmp-strict.cabal
.github/workflows/: action.yml
AD/: AD.hs  AD2.hs  AD3.hs  AD4.hs  Free.hs  GMM.hs  Linear.hs  Runtime.hs
BluefinZipTar/: BluefinZipTar.hs
Class/: Class.hs
DependentSum/: DependentSum.hs
Eff/: Eff.hs  ReviewLens.hs
Eff-Args/: tmp-eff.cabal
Eff-Args/app/: Concurrent.hs  DelimitYield.hs  Effectful.hs  Forall.hs  MVarTrans.hs  Main.hs  Optimize.hs  Rose.hs  RoseClass.hs  RoseMTL.hs  TransferrableHandle.hs
Eff-Optimize/: Main.hs  cabal.project.local  eff-optimize.cabal  optimizer-output.md
L/: L.hs
Lens/: PurePP.hs  lens.cabal
Op/: Op.hs
Tag/: README.md  generic.hs  test18.hs
Term/: Main.hs  NOTES.md  Term.cabal  smy  test_pty_ends_in_esc.zsh  test_scroll_up.zsh  test_wrapnext.zsh  test_wrapnext_preserved_by_esc.zsh
Term/app/: Exception.hs  Main.hs  Parse.hs
app/: Main.hs  Strict.hs
git-split/: README.md  split.sh
indexed-types/: indexed-types.cabal
indexed-types/src/IndexedTypes/: Consistency.hs  Example.hs  Index.hs  Knownly.hs  Reflection.hs  Some.hs
indexed-types/src/IndexedTypes/Example/: Finite.hs  Nat.hs
lib/: Strict.hs
reflection/: tmp-reflection.cabal
reflection/app/: Main.hs
socket/: tmp-socket.cabal
socket/app/: Main.hs
stricter/: these.md  tmp-strict.cabal
stricter/app/: Main.hs
stricter/lib/: Strict.hs
stricter/lib/Data/Strict/: Nested.hs  Wrapper.hs
wordle/: wordle.cabal
wordle/app/: Main.hs
