cabal-version:      3.6
name:               eff-optimize
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable tmp-eff
    import:           warnings
    main-is:          Main.hs

    build-depends:    base, transformers >= 0.6
    default-language: Haskell2010
