-- Every Haskell package must have a name and a version even if you
-- don't care at all what they are.  We just use some dummy ones.
name:                lens-experiments
version:             0.0.0.0

build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  -- Every module in your package must be listed here.  Additionally,
  -- every source file must contain its name (somewhat redundantly) at
  -- the top in a "module ... where" line.
  exposed-modules:     PurePP
  -- Packages you depend on should be specified under "build-depends"
  -- (preferably with a version lower bound).  This is a bit like a
  -- Python "requirements.txt"
  build-depends:       base,
                       profunctors,
                       distributive,
                       pointed
  default-language:    Haskell2010
