cabal-version:      3.0
name:               Term
version:            0.1.0.0

common warnings
    ghc-options: -Wall -threaded

executable Term
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, unix, process, bytestring, posix-pty
    hs-source-dirs:   app
    default-language: Haskell2010
