cabal-version:      3.0
name:               Term
version:            0.1.0.0

common warnings
    -- We have to use -threaded because otherwise the file descriptor
    -- reads, as foreign calls, block the whole process.  See
    --
    --    https://hackage.haskell.org/package/base-4.17.0.0/docs/Control-Concurrent.html#g:5
    ghc-options: -Wall -threaded

executable Term
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    async,
                      base >=4.14 && < 4.22,
                      unix ^>= 2.8,
                      process,
                      bytestring,
                      posix-pty,
                      typed-process
    hs-source-dirs:   app
    default-language: Haskell2010
