cabal-version:      3.0
name:               indexed-types
version:            0.0.0.0
license:            MIT
author:             Tom Ellis
maintainer:         Tom Ellis
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  IndexedTypes.Consistency
                      IndexedTypes.Example.Finite
                      IndexedTypes.Example.Nat
                      IndexedTypes.Index
                      IndexedTypes.Knownly
                      IndexedTypes.Reflection
                      IndexedTypes.Some

    build-depends:    base >=4.14.3.0,
                      generic-data >= 1.1.0.0 && < 1.2

    hs-source-dirs:   src

    default-language: Haskell2010
