cabal-version:      2.4
name:               tmp-strict
version:            0

executable tmp-strict
    main-is:          Main.hs

    build-depends:    base ^>=4.14.3.0, containers, stricter
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -rtsopts

library stricter
    build-depends:    base, strict, these
    hs-source-dirs:   lib
    exposed-modules:  Strict
    ghc-options:      -Wall
